--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -35,5 +35,6 @@
         "/Users/yangtao23/.local/share/nvim/site/pack/packer/start/cmp_luasnip/after",
         "/Users/yangtao23/.config/nvim/after",
         "${3rd}/luassert/library"
-    ]
+    ],
+    "workspace.checkThirdParty": false
 }
